--- a/mobdev-app/src/app/pages/people/people.page.html
+++ b/mobdev-app/src/app/pages/people/people.page.html
@@ -1,9 +1,13 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>people</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>People</ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content>
-
+ 
+<ion-content class="ion-padding">
+  <ion-list>
+    <ion-item button detail lines="inset" *ngFor="let film of (People | async)?.results" (click)="openDetails(People)">
+      {{ People}}
+    </ion-item>
+  </ion-list>
 </ion-content>
